common-applications/test-environment/openeuler-ccs/gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openeuler-ccs-gateway-service
  namespace: openeuler-ccs
spec:
  clusterIP: None
  ports:
  - name:
    port: 8088
    targetPort: 8088
  selector:
    server: ccs-gateway
